Bug 690199 - ARIA select widget should expose focusable state regardless the way they manage its children. r=surkov